[package]
name = "near-event-streams"
version = "0.1.0"
authors = ["Sigil Network <contact@sigilnet.com>"]
edition = "2021"

[dependencies]
near-indexer = { git = "https://github.com/near/nearcore.git", rev = "5228fb10617e9e07ddf1acafe039722534168305" }
near-o11y = { git = "https://github.com/near/nearcore.git", rev = "5228fb10617e9e07ddf1acafe039722534168305" }
actix = "0.13.0"
enum-map = "=2.1.0"
openssl-probe = "0.1.5"
tokio = { version = "1.1", features = ["sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0"
clap = "3.1.18"
tracing = "0.1.13"
tracing-subscriber = "0.3.9"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
