[package]
name = "near-event-streams"
version = "0.1.0"
authors = ["Sigil Network <contact@sigilnet.com>"]
edition = "2021"

[dependencies]
near-indexer = { git = "https://github.com/near/nearcore.git", rev = "088a149c3f2708af64b0053e3d03df1dfee00e7e" }
near-o11y = { git = "https://github.com/near/nearcore.git", rev = "088a149c3f2708af64b0053e3d03df1dfee00e7e" }
near-client = { git = "https://github.com/near/nearcore.git", rev = "088a149c3f2708af64b0053e3d03df1dfee00e7e" }
actix = "0.13.0"
enum-map = "=2.1.0"
openssl-probe = "0.1.5"
tokio = { version = "1.1", features = ["sync", "time"] }
tokio-stream = { version = "0.1.9" }
futures = "0.3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0"
clap = "3.1.18"
tracing = "0.1.13"
tracing-subscriber = "0.3.9"
rdkafka = { version = "0.25", features = ["cmake-build", "ssl"] }
config = "0.13.1"
log = "0.4.8"
env_logger = "0.9.0"
humantime = "2.1.0"
itertools = "0.10.3"
validator = { version = "0.15", features = ["derive"] }
regex = "1"
lazy_static = "1"

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
